--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2018"
 
 [dependencies]
 serenity = "^0.10.5"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-reqwest = "^0.11.0"
 dotenv = "^0.15.0"
+
+[dependencies.tokio]
+version = "1"
+features = ["macros", "rt-multi-thread"]
+
+[dependencies.isahc]
+version = "^1.3.0"
+features = ["json"]
