--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Run clippy 
         uses: actions-rs/clippy-check@v1
         with:
+        
           token: ${{ secrets.GITHUB_TOKEN }}
           
   rustmt:
@@ -41,6 +42,7 @@ jobs:
       
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           components: rustfmt
           profile: minimal
           override: true
